Added new notebook examples

--- a/examples/jupyter_nb/jp_nb_project_example.ipynb
+++ b/examples/jupyter_nb/jp_nb_project_example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine Learning Project using Zegami's SDK and Zegami's Web Platform"
+    "# Changing datafile using Tags"
    ]
   },
   {
@@ -312,11 +312,6 @@
    "source": [
     "Much better!"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
