--- a/examples/jupyter_nb/custom_feature_example.ipynb
+++ b/examples/jupyter_nb/custom_feature_example.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,6 +77,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workspaces_lst = zc.workspaces\n",
+    "# print(workspaces_lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get workspace using the ID\n",
+    "WORKSPACE_ID = 'GUDe4kRY' # zc.workspaces[1].id - select ID after printing workspaces\n",
+    "workspace = zc.get_workspace_by_id(WORKSPACE_ID)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -84,39 +105,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Workspace id=GUDe4kRY name=Martim Chaves>]\n"
-     ]
-    }
-   ],
-   "source": [
-    "workspaces_lst = zc.workspaces\n",
-    "print(workspaces_lst)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get workspace using the ID\n",
-    "WORKSPACE_ID = zc.workspaces[0].id # id=GUDe4kRY\n",
-    "workspace = zc.get_workspace_by_id(WORKSPACE_ID)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "\n",
-      "Collections in 'Martim Chaves' (2):\n",
+      "Collections in 'Martim Chaves' (3):\n",
       "6271698f81e4bccb640d6e24 : Flags of the world\n",
-      "62850bd97e2168af00fef191 : X-ray-analysis\n"
+      "62850bd97e2168af00fef191 : X-ray-analysis\n",
+      "629f7935295f96ab09285a8a : Xray-analysis\n"
      ]
     }
    ],
@@ -126,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +504,7 @@
        "dict_keys(['pa_sim_view', 'pneumonia_pa', 'wrong_file_name', 'healthy_pa'])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,12 +683,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.3 Adding a new feature to the datafile"
+    "## 6.3 Creating a new feature"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,112 +698,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "homogeneity_feature.set_index('index', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.4 Adding the feature to the datafile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datafile_df = collection.rows.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add homegeneity data to the datafile\n",
+    "datafile_df = datafile_df.join(homogeneity_feature)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace datafile to include new data\n",
+    "collection.replace_data(datafile_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>homogeneity</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>index</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>990</th>\n",
-       "      <td>0.317786</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>970</th>\n",
-       "      <td>0.275567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1249</th>\n",
-       "      <td>0.325527</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1476</th>\n",
-       "      <td>0.283414</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1555</th>\n",
-       "      <td>0.326297</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1417</th>\n",
-       "      <td>0.296591</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1066</th>\n",
-       "      <td>0.249359</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1351</th>\n",
-       "      <td>0.275105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1512</th>\n",
-       "      <td>0.290057</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1193</th>\n",
-       "      <td>0.281159</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1920 rows × 1 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       homogeneity\n",
-       "index             \n",
-       "990       0.317786\n",
-       "970       0.275567\n",
-       "1249      0.325527\n",
-       "1476      0.283414\n",
-       "1555      0.326297\n",
-       "...            ...\n",
-       "1417      0.296591\n",
-       "1066      0.249359\n",
-       "1351      0.275105\n",
-       "1512      0.290057\n",
-       "1193      0.281159\n",
-       "\n",
-       "[1920 rows x 1 columns]"
+       "{'changed_at': 'Wed, 10 Aug 2022 11:04:35 GMT',\n",
+       " 'progress': 1.0,\n",
+       " 'status': 'completed'}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "homogeneity_feature.set_index('index')"
+    "# Check status of collection (status has to be completed before continuing)\n",
+    "collection.status"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After that, the new feature should be added to the collection datafile!"
    ]
   }
  ],
@@ -833,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
